--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,58 +9,128 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
   <style>
+    *{
+      margin: 0;
+      padding: 0;
+    }
     #speed-meter {
       font-size: 2em;
       margin-top: 20px;
     }
+
+    .footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+    }
+
+    .full-body {
+      background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 71, 121, 0.8548669467787114) 10%,
+          rgba(0, 232, 255, 0.9529061624649859) 100%);
+          height: 100vh;
+    }
   </style>
 </head>
+
 <body>
+  <section class="full-body pt-5 text-white">
+    <div class="container">
+      <h1 class="text-center">Speed Meter</h1>
+      <!-- <p>Tracking the speed of your bike or bus.</p> -->
 
-<div class="container">
-  <h1 class="mt-5">Speed Meter</h1>
-  <p>Tracking the speed of your bike or bus.</p>
+      <!-- clock -->
+      <div class="mt-5">
+        <div class="row">
+          <div class="col-md-6 offset-md-3 text-center">
+            <div id="clock" class="clock"></div>
+          </div>
+        </div>
+      </div>
 
-  <div id="speed-meter" class="text-center">0 km/h</div>
-</div>
+      <!-- spped meter -->
+      <div id="speed-meter" class="text-center">0 km/h</div>
+    </div>
 
-<!-- Bootstrap JS and Popper.js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Custom JS -->
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    if (navigator.geolocation) {
-      // Options for geolocation
-      const options = {
-        enableHighAccuracy: true,
-        timeout: 5000,
-        maximumAge: 0
-      };
+    <!-- footer -->
+    <div class="footer text-center bg-light text-dark p-3 fs-5" id="footer">
+      <div class="container">
+        ©Copyright 2023 mustakkafy.com All RightReserved.
+      </div>
+    </div>
+  </section>
+  <!-- Bootstrap JS and Popper.js -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Custom JS -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      if (navigator.geolocation) {
+        // Options for geolocation
+        const options = {
+          enableHighAccuracy: true,
+          timeout: 5000,
+          maximumAge: 0
+        };
 
-      // Success callback
-      function success(position) {
-        const speed = position.coords.speed || 0; // Speed in meters per second
-        const speedKmH = (speed * 3.6).toFixed(2); // Convert to kilometers per hour
+        // Success callback
+        function success(position) {
+          const speed = position.coords.speed || 0; // Speed in meters per second
+          const speedKmH = (speed * 3.6).toFixed(2); // Convert to kilometers per hour
 
-        // Update the speed meter
-        document.getElementById("speed-meter").innerText = `${speedKmH} km/h`;
+          // Update the speed meter
+          document.getElementById("speed-meter").innerText = `${speedKmH} km/h`;
+        }
+
+        // Error callback
+        function error(err) {
+          console.warn(`ERROR(${err.code}): ${err.message}`);
+        }
+
+        // Watch the position
+        const watchId = navigator.geolocation.watchPosition(success, error, options);
+
+        // Uncomment the line below to stop watching the position after a certain time (e.g., 30 seconds)
+        // setTimeout(() => navigator.geolocation.clearWatch(watchId), 30000);
+      } else {
+        alert("Geolocation is not supported by this browser.");
       }
+    });
 
-      // Error callback
-      function error(err) {
-        console.warn(`ERROR(${err.code}): ${err.message}`);
-      }
+    function updateClock() {
+      var now = new Date();
+      var hours = now.getHours();
+      var minutes = now.getMinutes();
+      var seconds = now.getSeconds();
+      var day = now.getDate();
+      var month = now.getMonth() + 1; // Months are zero-based
+      var year = now.getFullYear();
 
-      // Watch the position
-      const watchId = navigator.geolocation.watchPosition(success, error, options);
-
-      // Uncomment the line below to stop watching the position after a certain time (e.g., 30 seconds)
-      // setTimeout(() => navigator.geolocation.clearWatch(watchId), 30000);
-    } else {
-      alert("Geolocation is not supported by this browser.");
+      // Add leading zero if needed
+      hours = (hours < 10) ? '0' + hours : hours;
+      minutes = (minutes < 10) ? '0' + minutes : minutes;
+      seconds = (seconds < 10) ?
+        '0' + seconds : seconds;
+      month = (month < 10) ? '0' + month : month;
+      day = (day < 10) ? '0' + day : day;
+      var
+        timeString = hours + ':' + minutes + ':' + seconds;
+      var dateString = year + '-' + month + '-' + day;
+      document.getElementById('clock').innerHTML = timeString + '<br>' + dateString;
+      setTimeout(updateClock, 1000); //
     }
-  });
-</script>
+    updateClock(); // Initial call to display clock
+
+    document.addEventListener("DOMContentLoaded", function () {
+      // Get the current year
+      var currentYear = new Date().getFullYear();
+
+      // Update the footer content
+      var footer = document.getElementById("footer");
+      if (footer) {
+        footer.innerHTML = "&copy; Copyright " + currentYear + " mustakkafy.com All Rights Reserved.";
+      }
+    });
+  </script>
 
 </body>
+
 </html>
